# temporal-mcp

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  env.examples  pyproject.toml
.github/workflows/: ci.yml  docker.yml
docs/auth/: README.md  incoming-sso.md  keycloak-setup.md  mode-exchange.md  mode-passthrough.md  mode-service.md
src/temporal_mcp/: __init__.py  config.py  enums.py  main.py  middleware.py  tool_annotations.py
src/temporal_mcp/errors/: __init__.py  base.py  exceptions.py  messages.py  rpc_exceptions.py  rpc_translation.py
src/temporal_mcp/mappers/: __init__.py  activity_mapper.py  batch_mapper.py  failure_mapper.py  helpers.py  namespace_mapper.py  nexus_mapper.py  schedule_mapper.py  task_queue_mapper.py  worker_deployment_mapper.py  workflow_mapper.py  workflow_rule_mapper.py
src/temporal_mcp/models/: __init__.py  action_models.py  activity_models.py  batch_models.py  failure_models.py  namespace_models.py  nexus_models.py  schedule_models.py  task_queue_models.py  (+3 more)
tests/: conftest.py  test_action_renderer.py  test_activity_mappers.py  test_activity_renderers.py  test_activity_service.py  test_activity_tools.py  test_activity_wiring.py  test_auth_policy.py  test_auth_service.py  test_batch_mappers.py  test_batch_renderers.py  test_batch_service.py  test_batch_tools.py  test_batch_wiring.py  test_client_pool.py  test_config.py  test_domain_services.py  test_enums.py  test_errors.py  test_failure_mappers.py  test_failure_models.py  test_failure_renderers.py  test_failure_service.py  test_failure_tools.py  test_main_build.py  test_mapper_helpers.py  test_middleware.py  test_model_descriptions.py  test_models.py  test_namespace_mappers.py  test_namespace_renderers.py  test_namespace_tools.py  test_nexus_mappers.py  test_nexus_renderers.py  test_nexus_service.py  test_nexus_tools.py  test_nexus_wiring.py  test_prompts.py  test_providers.py  test_read_only_mode.py  (+33 more)
(+51 files in other folders)
